Fix spacing on homepage

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -49,7 +49,7 @@ li {
 
 .about_me {
   border-top: 2.5px ridge gray; 
-  height: 35%;
+  height: 45%;
   p {
     width: 80%;
     margin-right: 10%;
@@ -58,7 +58,7 @@ li {
 }
 
 .tools {
-  height: 25%;
+  height: 30%;
   margin-top: 0px;
   #dev_tools,
   #testing_tools,
